# blama

./: .gitignore  CMakeLists.txt  README.md
cmake/: bl_dep.cmake  bl_lib_subdirs.cmake
cmake/bl-deps/: boost.cmake  itlib.cmake  jalog.cmake  minja.cmake  nl-json.cmake  splat.cmake
common/: CMakeLists.txt
common/bstl/: CMakeLists.txt
common/bstl/include/: CMakeLists.txt
common/bstl/include/bstl/: iile.h  mem_ext.hpp  move.hpp  move_capture.hpp  thread_runner.hpp  throw_stdex.hpp  u8c.h
common/bstl/test/: CMakeLists.txt  t-iile.cpp  t-mem_ext.cpp  t-move-bf.cpp  t-move.cpp  t-move_capture.cpp  t-u8c.cpp
docs/design/: Server-API.md
inference/: CMakeLists.txt
inference/code/: CMakeLists.txt
inference/code/llama/: AntipromptManager.cpp  AntipromptManager.hpp  ChatFormat.cpp  ChatFormat.hpp  ChatMsg.hpp  ControlVector.cpp  ControlVector.hpp  IncrementalStringFinder.cpp  IncrementalStringFinder.hpp  Init.cpp  Init.hpp  Instance.cpp  Instance.hpp  InstanceEmbedding.cpp  InstanceEmbedding.hpp  Logging.cpp  Logging.hpp  LogitComparer.cpp  LogitComparer.hpp  LoraAdapter.cpp  LoraAdapter.hpp  Model.cpp  Model.hpp  Sampler.cpp  Sampler.hpp  Session.cpp  Session.hpp  Token.hpp  Vocab.cpp  Vocab.hpp  api.h
inference/example/: CMakeLists.txt  e-basic.cpp  e-verified-chat.cpp  e-verify.cpp
inference/test/: CMakeLists.txt  t-Antiprompt.cpp  t-ChatFormat.cpp  t-LogitComparer.cpp  t-integration.cpp
sandbox/: CMakeLists.txt  sandbox.cpp
server/: CMakeLists.txt  ServerMain.cpp  test.rb
server/code/: CMakeLists.txt
server/code/http/: HttpServerMain.cpp  test.rb
server/code/server/: Server.cpp  Server.hpp  api.h
server/example/: CMakeLists.txt  e-server-cli.cpp
